--- a/library.properties
+++ b/library.properties
@@ -2,8 +2,8 @@ name=Octofet
 version=1.0.0
 author=Igor Dementiev <igor@amperka.ru>
 maintainer=Amperka <dev@amperka.com>
-sentence=Allows to control the power switches on board Octofet.
-paragraph=The library allows you to control devices through the output shift register (74HC595) via the hardware or software SPI interface.
+sentence=Amperka Octofet board (eight-channel power switch) interface library.
+paragraph=Control multiple high-power loads through the Amperka Octofet board using hardware or software SPI interface.
 category=Device Control
 url=https://github.com/amperka/Octofet
 architectures=*
